--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM java:8-jre
-MAINTAINER Alexander Lukyanchikov <sqshq@sqshq.com>
+MAINTAINER Mykola Bohdan <mykola.bohdan@smartive.app>
 
 ADD ./target/auth-service.jar /app/
 CMD ["java", "-Xmx200m", "-jar", "/app/auth-service.jar"]
